--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
     "@angular/core": "~11.2.4",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.4",
     "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "angularfire2": "^5.4.2",
+    "firebase": "^8.3.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.6",
