--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@ngrx/store": "^11.1.0",
     "angularfire2": "^5.4.2",
     "firebase": "^8.3.1",
     "hammerjs": "^2.0.8",
